# pipes-rs

./: Cargo.toml  LICENSE-MIT  README.md  bors.toml
.github/workflows/: cd.yaml  ci.yaml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: config.rs  direction.rs  lib.rs  pipe.rs  position.rs
crates/model/src/pipe/: color.rs  history_keeper.rs  kind.rs
crates/pipes-rs/: Cargo.toml
crates/pipes-rs-core/: Cargo.toml
crates/pipes-rs-core/src/: lib.rs
crates/pipes-rs/benches/: one_frame.rs
crates/pipes-rs/src/: config.rs  direction.rs  lib.rs  main.rs  pipe.rs  position.rs  usage
crates/rng/: Cargo.toml
crates/rng/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs  screen.rs  stdout_backend.rs  void_backend.rs
src/: config.rs  direction.rs  main.rs  pipe.rs  position.rs
