[package]
authors = ["lhvy <me@lhvy.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "config"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
etcetera = "0.3.2"
model = {path = "../model"}
serde = "1.0.118"
structopt = "0.3.21"
toml = "0.5.8"
