[package]
authors = ["CookieCoder15 <40507205+CookieCoder15@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "model"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
rand = "0.8.0"
serde = {version = "1.0.118", features = ["derive"]}
terminal = {path = "../terminal"}
tincture = "0.5.0"
