[package]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "model"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rng = {path = "../rng"}
serde = {version = "1.0", features = ["derive"]}
terminal = {path = "../terminal"}
tincture = "0.5.0"
