[package]
edition = "2021"
license = "BlueOak-1.0.0"
name = "model"
version = "0.0.0"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.5.20", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
rng = {path = "../rng"}
serde = {version = "1.0.159", features = ["derive"]}
terminal = {path = "../terminal"}
tincture = "1.0.0"
