[package]
authors = ["lhvy <me@lhvy.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "pipes-rs-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
config = {path = "../config"}
model = {path = "../model"}
rng = {path = "../rng"}
terminal = {path = "../terminal"}
