[package]
description = "An over-engineered rewrite of pipes.sh in Rust"
edition = "2021"
license = "BlueOak-1.0.0"
name = "pipes-rs"
version = "1.6.2"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive", "help", "wrap_help"] }
etcetera = "0.8.0"
mimalloc = { version = "0.1.36", default-features = false }
model = { path = "../model" }
rng = { path = "../rng" }
serde = "1.0.159"
terminal = { path = "../terminal" }
toml = "0.8.2"
