[package]
description = "An over-engineered rewrite of pipes.sh in Rust"
edition = "2021"
license = "BlueOak-1.0.0"
name = "pipes-rs"
version = "1.6.3"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.5.20", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
home = "0.5.5"
mimalloc = { version = "0.1.36", default-features = false }
model = { path = "../model" }
rng = { path = "../rng" }
serde = "1.0.159"
terminal = { path = "../terminal" }
toml = "0.8.2"
