[package]
authors = ["lhvy <cookiecoder15@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "terminal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
crossterm = "0.19.0"
unicode-width = "0.1.8"

[dependencies.flume]
default_features = false
version = "0.10.2"
